...

public enum LGRendererEventKind: Equatable, Sendable {
    case appear
    case press
    case longPress
    case textChanged
    case submit
    case toggleChanged
    case change
    case valueChanged
    case dismiss
    case doublePress
    case scrollCompleted
...
